--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "59806a4e-b5d3-45d0-a192-420ea6f34076",
    "metadata": {},
    "outputs": [],
@@ -137,6 +137,7 @@
     "\n",
     "        data = []\n",
     "\n",
+    "        # Sample random data\n",
     "        for _ in range(num_items):\n",
     "            result = []\n",
     "            offsets = 0\n",
@@ -173,27 +174,30 @@
     "        return self.data[idx]\n",
     "\n",
     "    def __len__(self):\n",
-    "        return self._num_items"
+    "        return self._num_items\n",
+    "\n",
+    "    # Utils function\n",
+    "    def pop_info(self):\n",
+    "        return\n",
+    "\n",
+    "    def describe(self):\n",
+    "        desc = (\n",
+    "            \"MockDataset(\"\n",
+    "            f\"field_dims={self.field_dims}\"\n",
+    "            f\"include_offsets={self._include_offsets}\"\n",
+    "            f\"num_item={self._num_items}\"\n",
+    "            \")\"\n",
+    "        )\n",
+    "\n",
+    "        print(desc)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "588134b4-1178-40d4-8601-0577b0371fa5",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "Can't instantiate abstract class MockDataset without an implementation for abstract methods 'describe', 'pop_info'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[17], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m hidden_size \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m4\u001b[39m\n\u001b[1;32m      3\u001b[0m model \u001b[38;5;241m=\u001b[39m MockModel(field_dims, hidden_size)\n\u001b[0;32m----> 4\u001b[0m dataset \u001b[38;5;241m=\u001b[39m \u001b[43mMockDataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfield_dims\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: Can't instantiate abstract class MockDataset without an implementation for abstract methods 'describe', 'pop_info'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "field_dims = [3,3,4]\n",
@@ -329,7 +333,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "std=0.01 - ratio=0.01: 100%|#####################################################################################################################################################################| 10000/10000 [00:31<00:00, 321.54it/s]"
+      "std=0.01 - ratio=0.01: 100%|#####################################################################################################################################################################| 10000/10000 [00:29<00:00, 337.47it/s]"
      ]
     },
     {
